# AQI-10p

./: .env.example  .gitignore  README.md  app.py  aqi_data.csv  backfill.py  eda.py  evaluation.csv  feature_importance.csv  fetcher.py  main.py  model.joblib  pyproject.toml  requirements.txt  train.py
.github/workflows/: feature_pipeline.yml  training_pipeline.yml
.streamlit/: config.toml
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_model_benchmark.ipynb  04_shap_analysis.ipynb
scripts/: backfill.py  local_test_pipeline.py
src/: __init__.py  config.py  hopsworks_setup.py
src/api/: __init__.py  main.py  routes.py  schemas.py
src/dashboard/: __init__.py  app.py
src/dashboard/components/: __init__.py  alerts.py  aqi_gauge.py  charts.py
src/dashboard/pages/: 01_Forecast.py  02_Model_Comparison.py  03_Feature_Importance.py  04_Alerts.py
src/feature_pipeline/: __init__.py  fetcher.py  loader.py  runner.py  transformer.py
src/training_pipeline/: __init__.py  evaluator.py  loader.py  models.py  registry.py  runner.py
tests/: __init__.py  conftest.py  test_api.py  test_evaluator.py  test_fetcher.py  test_models.py  test_transformer.py
