[project]
name = "pearls-aqi-predictor"
version = "0.1.0"
description = "End-to-end AQI prediction for Indian cities using a serverless ML stack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "hopsworks>=3.9",
    "requests>=2.32",
    "scikit-learn>=1.6",
    "shap>=0.46",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "streamlit>=1.40",
    "plotly>=5.24",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
tensorflow = ["tensorflow>=2.18"]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "httpx>=0.28",
    "jupyter>=1.1",
    "nbformat>=5.10",
]
