[project]
name = "pearls-aqi-predictor"
version = "0.1.0"
description = "Simple AQI prediction dashboard for Indian cities"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "requests>=2.32",
    "scikit-learn>=1.6",
    "streamlit>=1.40",
    "plotly>=5.24",
    "python-dotenv>=1.0",
    "joblib>=1.4",
]
